infra/kubernetes/manifests/client-service.yml
apiVersion: v1 
kind: Service
metadata: 
  name: clockapp-client-dev-service
  labels: 
    app: clockapp-client-dev
spec: 
  selector: 
    app: clockapp-client-dev
  type: ClusterIP
  ports:  
    - name: httpd-port
      protocol: TCP 
      port: 8081
      targetPort: httpd_port
