infra/kubernetes/manifests/client-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: clockapp-client-dev-ingress
  labels: 
    app: clockapp-client-dev
spec:
  rules:
    - host: clockapp-dev.apps.numerique-interieur.com
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clockapp-client-dev-service
                port: 
                  name: httpd-port
